deploy/base/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stockbots
  namespace: stockbots-dev
  labels:
    app: stockbots
spec:
  terminationGracePeriodSeconds: 30
  containers:
    - name: stockbots
      image: ntueeboy/stockbots:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 5000
          name: stockbots-svc
